removed domestic word from scenario values for all endpoints
